Changed app loader. Fixed profile component responsive layout issue.

--- a/src/components/bookCarousel/book-carousel.css
+++ b/src/components/bookCarousel/book-carousel.css
@@ -76,7 +76,7 @@
     border-left: 1px solid transparent;
     border-radius: 50%;
     background-color: #008a8a;
-    z-index: 8;
+    z-index: 1;
     transform: translate(-50%, -50%) rotate(45deg);
     cursor: pointer;
     transition: all 0.3s;
@@ -110,7 +110,7 @@
     border-left: 1px solid transparent;
     border-radius: 50%;
     background-color: #008a8a;
-    z-index: 8;
+    z-index: 1;
     transform: translate(50%, -50%) rotate(45deg);
     cursor: pointer;
     transition: all 0.3s;
