--- a/src/components/mainLoader/app-loader.css
+++ b/src/components/mainLoader/app-loader.css
@@ -8,121 +8,52 @@
     background: linear-gradient(to bottom right, var(--color1), var(--color2));
 }
 
-/* Book Div/Background */
-.book {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 180px; 
-    height: 100px;
-  }
+.app-loader::after{
+  content: 'Loading...';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, calc(-50% + 70px));
+  font-family: 'Roboto', sans-serif;
+  color: white;
+  animation: loadingText 1s ease-in-out infinite;
+  font-size: 1.4em;
+}
 
-  .book::after{
-      content: 'Loading...';
-      position: absolute;
-      top: 100%;
-      left: calc(50% + 12px);
-      transform: translateX(-50%);
-      font-size: 1.4em;
-      font-family: 'Roboto', sans-serif;
-      font-weight: 300;
-      color: white;
+.app-loader svg{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: appLoader 2s ease-in-out infinite;
+}
+
+@keyframes appLoader {
+  0%{
+    transform: translate(-50%, calc(-50% - 24px)) scale(1) ;
   }
-  
-  /* Cover and Page Common Properties */
-  .cover, .page {
-    position: absolute;
-    top:4px;
-    border-radius: 5px;
-    -webkit-transform-origin: 50% 97%;
-    -ms-transform-origin: 50% 97%;
-    transform-origin: 50% 97%;
-  }	
-  
-  /* Covers Only */
-  .cover{
-    background-color:  #ffa938;
-    border: 1px solid black;
-    left: 50%;
-    z-index: 1;
-    height: 80px;
-    width: 8px;
-    top: 0px;
+  25%{
+    transform: translate(-50%, calc(-50% - 24px)) scale(1.2) ;
   }
-  .cover:nth-of-type(2) {
-    -webkit-transform:rotate(90deg);
-        -ms-transform:rotate(90deg);
-            transform:rotate(90deg);
+  50%{
+    transform: translate(-50%, calc(-50% - 24px)) scale(1) ;
   }
-  .cover:nth-of-type(1) {
-    -webkit-transform:rotate(-90deg);
-        -ms-transform:rotate(-90deg);
-            transform:rotate(-90deg);
+  75%{
+    transform: translate(-50%, calc(-50% - 24px)) scale(1.2) ;
   }
-  
-  /* Pages Only */
-  .page{
-    background-color: #fff;
-    height: 74px;
-    width: 2px;
-    left: 52%;
-    -webkit-transform:rotate(-90deg);
-    -ms-transform:rotate(-90deg);
-    transform:rotate(-90deg);
-    -webkit-animation: pageturn 5s .3s cubic-bezier(0.19, 1, 0.22, 1) infinite;
-    animation: pageturn 5s .3s cubic-bezier(0.19, 1, 0.22, 1) infinite;
+  100%{
+    transform: translate(-50%, calc(-50% - 24px)) scale(1) ;
   }
-  .page:nth-of-type(3) {
-    -webkit-animation-delay: 0.05s;
-            animation-delay: 0.05s;
+}
+
+@keyframes loadingText{
+  0%{
+    transform: translate(-50%, calc(-50% + 70px)) rotate(4deg) ;
   }
-  .page:nth-of-type(4) {
-    -webkit-animation-delay: 0.10s;
-            animation-delay: 0.10s
+  50%{
+    transform: translate(-50%, calc(-50% + 70px)) rotate(-4deg) ;
   }
-  .page:nth-of-type(5) {
-    -webkit-animation-delay: 0.25s;
-            animation-delay: 0.25s;
+  100%{
+    transform: translate(-50%, calc(-50% + 70px)) rotate(4deg) ;
   }
-  .page:nth-of-type(6) {
-    -webkit-animation-delay: 0.40s;
-            animation-delay: 0.40s;
-  }
-  .page:nth-of-type(7) {
-    -webkit-animation-delay: 0.55s;
-            animation-delay: 0.55s;
-  }
-  .page:nth-of-type(8) {
-    -webkit-animation-delay: 0.70s;
-            animation-delay: 0.70s;
-  }
-  .page:nth-of-type(9) {
-    -webkit-animation-delay: 0.85s;
-            animation-delay: 0.85s;
-  }
-  .page:nth-of-type(10) {
-    -webkit-animation-delay: 1.0s;
-            animation-delay: 1.0s;
-  }
-  .page:nth-of-type(11) {
-    -webkit-animation-delay: 1.15s;
-            animation-delay: 1.15s;
-  }
-  .page:nth-of-type(12) {
-    -webkit-animation-delay: 1.30s;
-            animation-delay: 1.30s;
-  }
-  
-  @-webkit-keyframes pageturn{
-      0%{-webkit-transform:rotate(-90deg);transform:rotate(-90deg);}
-      50%{-webkit-transform:rotate(90deg);transform:rotate(90deg);}
-      100%{-webkit-transform:rotate(-90deg);transform:rotate(-90deg);}
-  }
-  
-  @keyframes pageturn{
-      0%{-webkit-transform:rotate(-90deg);transform:rotate(-90deg);}
-      50%{-webkit-transform:rotate(90deg);transform:rotate(90deg);}
-      100%{-webkit-transform:rotate(-90deg);transform:rotate(-90deg);}
-  }
-  
+}
