--- a/src/components/navbarApp/navbar-app.css
+++ b/src/components/navbarApp/navbar-app.css
@@ -195,7 +195,7 @@
     box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.336);
     background-color: white;
     color: var(--color1);
-    z-index: 1;
+    z-index: 2;
     animation: showNavbarMenu 0.5s cubic-bezier(0.475, 0.885, 0.32, 1.275);
 }
 
@@ -209,7 +209,8 @@
     margin: 0px;
     padding: 12px;
     text-align: center;
-    font-weight: 500;
+    font-weight: 400;
+    font-size: 0.9em;
 }
 
 .navbar-menu h4:hover{
