--- a/src/layout/app/profile/profile.css
+++ b/src/layout/app/profile/profile.css
@@ -14,6 +14,7 @@
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.432);
     flex: 1;
     overflow: auto;
+    min-width: 200px;
 }
 
 .profile-container .p-user-info img{
@@ -46,6 +47,7 @@
     max-height: 100%;
     overflow: hidden;
     flex: 2;
+    min-width: 300px;
 }
 
 /* Scroll arows */
